# candle-cli

./: Cargo.toml  README.md  pyproject.toml
docs/plans/: 2026-04-15-candle-terminal-agent-design.md  2026-04-15-candle-terminal-agent-mvp.md
docs/superpowers/plans/: 2026-04-16-candle-cli-phase1-implementation.md
docs/superpowers/specs/: 2026-04-16-candle-cli-design.md
src/: lib.rs  main.rs
src/agent/: loop.rs  mod.rs  state.rs  turn.rs
src/candle_cli/: __init__.py
src/candle_cli/runtime/: __init__.py  session.py
src/cli/: args.rs  commands.rs  mod.rs  repl.rs
src/context/: budget.rs  builder.rs  compact.rs  mod.rs
src/model/: bridge.rs  candle.rs  mock.rs  mod.rs  runtime.rs  types.rs
src/permissions/: mod.rs  mode.rs  policy.rs  prompt.rs
src/session/: mod.rs  model.rs  resume.rs  store.rs
src/tools/: mod.rs  registry.rs  types.rs
src/tools/builtin/: edit.rs  glob.rs  grep.rs  mod.rs  pwd.rs  read.rs  shell.rs  write.rs
src/ui/: format.rs  mod.rs  render.rs  spinner.rs
tests/: conftest.py  test_package.py  test_session.py
tests/agent/: test_agent_loop.rs  test_context_builder.rs
tests/cli/: test_args.rs  test_bootstrap.rs  test_commands.rs  test_doctor_status.rs  test_repl_session_integration.rs
tests/model/: test_bridge_runtime.rs  test_mock_runtime.rs  test_runtime_contract.rs
tests/permissions/: test_policy.rs
tests/session/: test_model.rs  test_store.rs
tests/tools/: test_read_only_tools.rs  test_write_edit_shell.rs
