[package]
name = "candle-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "candle-cli"
path = "src/main.rs"

[[test]]
name = "test_bootstrap"
path = "tests/cli/test_bootstrap.rs"

[[test]]
name = "test_args"
path = "tests/cli/test_args.rs"

[[test]]
name = "test_model"
path = "tests/session/test_model.rs"

[[test]]
name = "test_store"
path = "tests/session/test_store.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
