[package]
name = "candle-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "candle-cli"
path = "src/main.rs"

[[test]]
name = "test_bootstrap"
path = "tests/cli/test_bootstrap.rs"

[[test]]
name = "test_args"
path = "tests/cli/test_args.rs"

[[test]]
name = "test_model"
path = "tests/session/test_model.rs"

[[test]]
name = "test_store"
path = "tests/session/test_store.rs"

[[test]]
name = "test_commands"
path = "tests/cli/test_commands.rs"

[[test]]
name = "test_policy"
path = "tests/permissions/test_policy.rs"

[[test]]
name = "test_read_only_tools"
path = "tests/tools/test_read_only_tools.rs"

[[test]]
name = "test_runtime_contract"
path = "tests/model/test_runtime_contract.rs"

[[test]]
name = "test_mock_runtime"
path = "tests/model/test_mock_runtime.rs"

[[test]]
name = "test_context_builder"
path = "tests/agent/test_context_builder.rs"

[[test]]
name = "test_agent_loop"
path = "tests/agent/test_agent_loop.rs"

[[test]]
name = "test_write_edit_shell"
path = "tests/tools/test_write_edit_shell.rs"

[[test]]
name = "test_repl_session_integration"
path = "tests/cli/test_repl_session_integration.rs"

[[test]]
name = "test_doctor_status"
path = "tests/cli/test_doctor_status.rs"

[[test]]
name = "test_bridge_runtime"
path = "tests/model/test_bridge_runtime.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
